--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,16 +16,23 @@ httpcore==1.0.7
 httpx==0.28.1
 huggingface-hub==0.27.1
 idna==3.10
+Jinja2==3.1.5
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.14
 langchain-core==0.3.30
+langchain-huggingface==0.1.2
 langchain-text-splitters==0.3.5
 langsmith==0.2.11
+MarkupSafe==3.0.2
+mpmath==1.3.0
 multidict==6.1.0
+networkx==3.4.2
 numpy==1.26.4
 orjson==3.10.15
 packaging==24.2
+pillow==11.1.0
 propcache==0.2.1
 pydantic==2.10.5
 pydantic_core==2.27.2
@@ -34,10 +41,18 @@ regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.3.1
 sniffio==1.3.1
 SQLAlchemy==2.0.37
+sympy==1.13.1
 tenacity==9.0.0
+threadpoolctl==3.5.0
 tokenizers==0.21.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tqdm==4.67.1
 transformers==4.48.0
 typing_extensions==4.12.2
