--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,3 +5,4 @@ COPY ./requirements.txt /code/requirements.txt
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 USER user
+CMD ["tail", "-f", "/dev/null"]
