--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-langchain==0.3.14
+langchain==0.3.15
+langchain-community==0.3.15
 langchain-huggingface==0.1.2
+langgraph==0.2.66
 python-dotenv==1.0.1
 torch==2.5.1
 torchaudio==2.5.1
