A backend that works with the frontend. Streaming and history features

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,5 +8,16 @@ services:
     env_file:
       - .env
     volumes:
-      - ./:/app
+      - ./:/code
     user: "1000:1000"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    runtime: nvidia
