--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,5 @@
-langchain==0.3.15
-langchain-community==0.3.15
-langchain-huggingface==0.1.2
-langgraph==0.2.66
-python-dotenv==1.0.1
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
-transformers==4.48.0
+Flask==3.1.0
+Flask_Cors==5.0.0
+langchain_core==0.3.33
+torch==2.6.0
+transformers==4.48.2
