--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,45 +1,11 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-attrs==24.3.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-colorama==0.4.6
-filelock==3.16.1
-frozenlist==1.5.0
-fsspec==2024.12.0
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.27.1
-idna==3.10
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.14
-langchain-core==0.3.30
-langchain-text-splitters==0.3.5
-langsmith==0.2.11
-multidict==6.1.0
-numpy==1.26.4
-orjson==3.10.15
-packaging==24.2
-propcache==0.2.1
-pydantic==2.10.5
-pydantic_core==2.27.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-safetensors==0.5.2
-sniffio==1.3.1
-SQLAlchemy==2.0.37
-tenacity==9.0.0
-tokenizers==0.21.0
-tqdm==4.67.1
-transformers==4.48.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-yarl==1.18.3
+python-dotenv==1.0.1 # For reading environment variables stored in .env file
+langchain==0.2.2
+langchain-community==0.2.3
+langchain-openai==0.1.8 # For embeddings
+unstructured==0.14.4 # Document loading
+# onnxruntime==1.17.1 # chromadb dependency: on Mac use `conda install onnxruntime -c conda-forge`
+# For Windows users, install Microsoft Visual C++ Build Tools first
+# install onnxruntime before installing `chromadb`
+chromadb==0.5.0 # Vector storage
+openai==1.31.1 # For embeddings
+tiktoken==0.7.0  # For embeddings 
