--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
 Flask==3.1.0
-langchain==0.3.15
+langchain==0.3.17
 langchain-community==0.3.15
 langchain-huggingface==0.1.2
 langgraph==0.2.66
 python-dotenv==1.0.1
-torch==2.5.1
+torch==2.6.0
 torchaudio==2.5.1
 torchvision==0.20.1
 transformers==4.48.0
+pydantic==2.10.6
+Werkzeug==3.1.3
