--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ torchvision==0.20.1
 transformers==4.48.0
 pydantic==2.10.6
 Werkzeug==3.1.3
+flask-cors==4.0.0
+sentence-transformers==2.7.0
+accelerate==0.32.1
+bitsandbytes==0.43.1
